--- a/hello-api-ts/package.json
+++ b/hello-api-ts/package.json
@@ -10,11 +10,13 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@serverless/typescript": "^3.27.0",
     "@types/aws-lambda": "^8.10.111",
     "@types/node": "^18.15.2",
     "serverless-webpack": "^5.11.0",
     "source-map-support": "^0.5.21",
     "ts-loader": "^9.4.2",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.5"
   }
 }
